@@ -46,6 +46,9 @@
 - BUG: svn+ssh didn't work at all until now. Thanks
        to Bjoern Kuenstig we were able to make
        it work. (Stefan)
+- BUG: The dialog presented before an export had
+       some labels/title mention "Checkout" instead
+       of "Export" which confused some people. (Stefan)
        
 Version 0.21
 - ADD: If multiple targets are selected for
